--- a/public/templates/dashboard/index.html
+++ b/public/templates/dashboard/index.html
@@ -9,17 +9,23 @@
         <div ng-repeat="follow in following | filter:filterText" class="item">
 
           <div class="well">
-            <div class="follow-img">
-              <img class="img-responsive" ng-src="{{ follow.profile.avatar }}">
-              <!-- <a href class="btn btn-primary view">unfollow</a> -->
-              <!-- <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a> -->
+
+            <div class='row'>
+              <div class='col-xs-12'>
+                <div class="follow-img">
+                  <img class="img-responsive" ng-src="{{ follow.profile.avatar }}">
+                  <!-- <a href class="btn btn-primary view">unfollow</a> -->
+                  <!-- <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a> -->
+                </div>
+
+                <p><strong>{{ follow.profile.first_name }} {{ follow.profile.last_name }}</strong></p>
+                <p><strong>From: </strong>{{ follow.profile.location }}</p>
+                <p><strong>Number of recipes: </strong>{{ follow.recipes.length }}</p>
+                <a href="/#/users/{{ follow.id }}" class="btn btn-primary">view profile</a>
+                <a href ng-click="unfollow(follow, $index)" class="btn btn-primary pull-right">unfollow</a>
+              </div>
             </div>
 
-            <p><strong>{{ follow.profile.first_name }} {{ follow.profile.last_name }}</strong></p>
-            <p><strong>From: </strong>{{ follow.profile.location }}</p>
-            <p><strong>Number of recipes: </strong>{{ follow.recipes.length }}</p>
-            <a href="/#/users/{{ follow.id }}" class="btn btn-primary">view profile</a>
-            <a href ng-click="unfollow(follow, $index)" class="btn btn-primary pull-right">unfollow</a>
           </div>
         </div>
 
