--- a/public/templates/dashboard/directory.html
+++ b/public/templates/dashboard/directory.html
@@ -23,16 +23,30 @@
         <div ng-repeat="user in users | filter:filterText | orderBy:sortType:sortReverse" class="item">
 
           <div class="well">
-            <div class="follow-img">
-              <img class="img-responsive" ng-src="{{ user.profile.avatar }}">
-              <!-- <a href class="btn btn-primary view">unfollow</a> -->
-              <!-- <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a> -->
-            </div>
+            <div class="row">
+              <div class="col-xs-12">
+                <div class="row">
 
-            <p><strong>{{ user.profile.first_name }} {{ user.profile.last_name }}</strong></p>
-            <p><strong>From: </strong>{{ user.profile.location }}</p>
-            <p><strong>Number of recipes: </strong>{{ user.recipes.length }}</p>
-            <a href="/#/users/{{ user.id }}" class="btn btn-primary btn-block">view profile</a>
+                  <div class="col-xs-4">
+                    <div class="follow-img">
+                      <img class="img-responsive" ng-src="{{ user.profile.avatar }}">
+                      <!-- <a href class="btn btn-primary view">unfollow</a> -->
+                      <!-- <a href="/#/users/{{ follow.id }}" class="btn btn-primary add">view profile</a> -->
+                    </div>
+                  </div>
+
+                  <div class="col-xs-8">
+                    <p><strong>{{ user.profile.first_name }} {{ user.profile.last_name }}</strong></p>
+                    <p><strong>From: </strong>{{ user.profile.location }}</p>
+                    <p><strong>Number of recipes: </strong>{{ user.recipes.length }}</p>
+                  </div>
+                </div>
+
+                <div class="col-xs-12">
+                  <a href="/#/users/{{ user.id }}" class="btn btn-primary btn-block">view profile</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
